// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Lists [CS-617] should not ignore double and triple dash in list item 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list item – 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list item — 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should correctly parse color macro inside a code macro 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "test


{color:red}



code inside noformat


{color:red}",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should have emphasis mark along with textColor 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#ff0000",
                      },
                      "type": "textColor",
                    },
                    {
                      "type": "em",
                    },
                  ],
                  "text": "test",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should have strikethrough mark along with textColor 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#ff0000",
                      },
                      "type": "textColor",
                    },
                    {
                      "type": "strike",
                    },
                  ],
                  "text": "test",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should have strikethrough mark along with textColor with inverted order 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "type": "strike",
                    },
                    {
                      "attrs": {
                        "color": "#ff0000",
                      },
                      "type": "textColor",
                    },
                  ],
                  "text": "test",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should have strong mark along with textColor 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#ff0000",
                      },
                      "type": "textColor",
                    },
                    {
                      "type": "strong",
                    },
                  ],
                  "text": "test",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should not have emphasis mark along with code macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "_",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "test",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "_",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse codeblock inside a color 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "code macro inside noformat",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse codeblock inside a noformat 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": null,
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "{code}code macro inside noformat{code}",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse color and code macro with multiple line breaks and strikethroughs successfully 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "test ",
                  "type": "text",
                },
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#ff0000",
                      },
                      "type": "textColor",
                    },
                    {
                      "type": "strike",
                    },
                  ],
                  "text": "one",
                  "type": "text",
                },
                {
                  "text": " test -",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "two",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "-",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse color and code macro with multiple line breaks successfully 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "test ",
                  "type": "text",
                },
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#ff0000",
                      },
                      "type": "textColor",
                    },
                  ],
                  "text": "one",
                  "type": "text",
                },
                {
                  "text": " test ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "two",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse image macro inside a color macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "layout": "center",
                "width": null,
                "widthType": null,
              },
              "content": [
                {
                  "attrs": {
                    "__contextId": null,
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": null,
                    "__fileName": null,
                    "__fileSize": null,
                    "__mediaTraceId": null,
                    "alt": "",
                    "collection": "",
                    "height": 183,
                    "id": "",
                    "occurrenceKey": null,
                    "type": "external",
                    "url": "http://example.com/?insection",
                    "width": 200,
                  },
                  "type": "media",
                },
              ],
              "type": "mediaSingle",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse image macro inside a noformat 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": null,
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "!http://example.com/?insection!",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFEXP-371 should parse invalid ADF macro inside a codeBlock 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": null,
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "Invalid ADF Macro: {"invalid": "foobar"}",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFS-453 should NOT create a list of more than 20 levels of nesting when nesting different types of lists 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "********************* a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ESS-2539 Should render list separated by ruler properly 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
                {
                  "attrs": {
                    "text": "
",
                  },
                  "type": "hardBreak",
                },
                {
                  "text": "      ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "b",
                          "type": "text",
                        },
                        {
                          "attrs": {
                            "text": "
",
                          },
                          "type": "hardBreak",
                        },
                        {
                          "text": "    ",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should NOT create a list of more than 20 levels of nesting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "********************* a",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should allow pipes in a list, and not render as a table 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "|",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "|",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should be able to create nested list with - 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "different",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "bullet",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "types",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should break out the media group 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "This is a media group ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-0",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": " and text after it",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should break out the media group but merge separate media groups into single media group if only separated by space 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "This is a media group ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-1",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-2",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-3",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-4",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": " and text after it ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-5",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-6",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-7",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-8",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should break out the media group even in nested list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "nested",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "media group ",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-0",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": " here",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "nice nice",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "all good",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should continue list if rule is followed by text on next line 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "abc",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should convert blockquotes into paragraphs 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "This is sparta",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should convert headings into paragraphs 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "type": "strong",
                    },
                  ],
                  "text": "FOO",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should convert rules into paragraphs 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should correctly insert a 5 dash ruler if it occurs within a list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "b",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "c",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "content": [
                        {
                          "content": [
                            {
                              "attrs": {
                                "localId": null,
                              },
                              "content": [
                                {
                                  "text": "d",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should correctly insert a ruler if it occurs within a list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "b",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "c",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "content": [
                        {
                          "content": [
                            {
                              "attrs": {
                                "localId": null,
                              },
                              "content": [
                                {
                                  "text": "d",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create a list if started with multiple hash symbols 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "attrs": {
                "order": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "a",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "orderedList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create a list if started with multiple star symbols 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "a",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create list of mentions with rule in middle 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "attrs": {
                    "accessLevel": "",
                    "id": "name1",
                    "localId": null,
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "attrs": {
                    "accessLevel": "",
                    "id": "name2",
                    "localId": null,
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "abc",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "attrs": {
                    "accessLevel": "",
                    "id": "name3",
                    "localId": null,
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "attrs": {
                            "accessLevel": "",
                            "id": "name4",
                            "localId": null,
                            "text": "",
                            "userType": null,
                          },
                          "type": "mention",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create single list mention 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "attrs": {
                    "accessLevel": "",
                    "id": "someName",
                    "localId": null,
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find mixed ordered -> unordered lists 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "numbered",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "with",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "nested",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "bullet",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find mixed unordered -> ordered lists 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "bulleted",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "order": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "with",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "nested",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "numbered",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "orderedList",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find ordered lists 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "numbered",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find the full content of a list item properly 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "nested",
                  "type": "text",
                },
                {
                  "attrs": {
                    "text": "
",
                  },
                  "type": "hardBreak",
                },
                {
                  "text": "       spaces in front of me",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find unordered lists where items start with * 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "some",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "bullet",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "marks": [
                            {
                              "type": "strong",
                            },
                          ],
                          "text": "indented",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "bullets",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "points",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find unordered lists where items start with - 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "different",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "bullet",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "types",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find unordered lists where items start with spaces 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "different",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "bullet",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "types",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should handle lists with quad dash symbols 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "type": "paragraph",
                    },
                    {
                      "content": [
                        {
                          "content": [
                            {
                              "attrs": {
                                "localId": null,
                              },
                              "type": "paragraph",
                            },
                            {
                              "content": [
                                {
                                  "content": [
                                    {
                                      "attrs": {
                                        "localId": null,
                                      },
                                      "content": [
                                        {
                                          "text": "b",
                                          "type": "text",
                                        },
                                      ],
                                      "type": "paragraph",
                                    },
                                  ],
                                  "type": "listItem",
                                },
                              ],
                              "type": "bulletList",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "c",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should insert a if it is followed by an empty line 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should jump over empty lines in macro successfully 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list with macro",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "sadfsadf",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "list 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should lift action list inside an orderedList 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
    {
      "attrs": {
        "localId": "0f945022-3cd7-4243-bc48-ea5cf8d8e03f",
      },
      "content": [
        {
          "attrs": {
            "localId": "be22aa5c-18e2-4658-a7e0-ff60dcad4fa7",
            "state": "TODO",
          },
          "content": [
            {
              "text": "task 1",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
        {
          "attrs": {
            "localId": "99fbd0cd-4d0a-45aa-9003-e6e61c697454",
          },
          "content": [
            {
              "attrs": {
                "localId": "93d93d4b-0eae-4d66-9e5e-5d4bd5bf821f",
                "state": "TODO",
              },
              "content": [
                {
                  "text": "sub-task 1",
                  "type": "text",
                },
              ],
              "type": "taskItem",
            },
          ],
          "type": "taskList",
        },
        {
          "attrs": {
            "localId": "b1e6f046-0def-4652-9b9d-25c1617a488e",
            "state": "TODO",
          },
          "content": [
            {
              "text": "task 2 ",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "item 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not be a list item if it follows by a line break 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "nested",
                  "type": "text",
                },
                {
                  "attrs": {
                    "text": "
",
                  },
                  "type": "hardBreak",
                },
                {
                  "text": "*",
                  "type": "text",
                },
                {
                  "attrs": {
                    "text": "
",
                  },
                  "type": "hardBreak",
                },
                {
                  "text": "*",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not break {color} macro to differnt lines 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#205081",
                      },
                      "type": "textColor",
                    },
                  ],
                  "text": "123",
                  "type": "text",
                },
                {
                  "text": " ",
                  "type": "text",
                },
                {
                  "marks": [
                    {
                      "attrs": {
                        "color": "#d04437",
                      },
                      "type": "textColor",
                    },
                  ],
                  "text": "456",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not create a list if started with multiple dashes 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "------ a",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not fail for multiple lists 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Steps to reproduce:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "Type something",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "Type @",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "Type few letters",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "mention mark disappears ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Expected:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "Mention mark doesn't disappear",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should support codeBlock in listItem now 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "item 2 with ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "code block",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should use mediaSingle nodes 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "layout": "center",
                "width": null,
                "widthType": null,
              },
              "content": [
                {
                  "attrs": {
                    "__contextId": null,
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": null,
                    "__fileName": null,
                    "__fileSize": null,
                    "__mediaTraceId": null,
                    "alt": "",
                    "collection": "",
                    "height": 183,
                    "id": "abc-attached",
                    "occurrenceKey": null,
                    "type": "file",
                    "url": null,
                    "width": 200,
                  },
                  "type": "media",
                },
              ],
              "type": "mediaSingle",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;
